loopfor.LoopCourse.scala.error
Erreur de compilation :
LoopCourse:1: error: '<-' expected but integer literal found.
for (i<- 1 to 40) {for (j 1 to 8) {avance();};gauche();} 
                          ^LoopCourse:1: error: illegal start of simple expression
for (i<- 1 to 40) {for (j 1 to 8) {avance();};gauche();} 
                                                       ^